<resources>
    <string name="app_name">Dr. Oleg UI task</string>
    <string name="name">Dr. Oleg Mayami</string>
    <string name="dental_surgeon">Dental surgeon</string>
    <string name="youe_friendly_dental_friend">Youe friendly Dental Friend</string>
    <string name="oleg_mayami93_gmail_com">oleg.mayami93@gmail.com</string>
    <string name="www_dental_com">www.dental.com</string>
    <string name="whatsapp_me">WhatsApp Me</string>
    <string name="save_to_phonebook">Save to phonebook</string>
    <string name="abdumomunova_146">Abdumomunova 146</string>
    <string name="make_an_appointment">Make an appointment</string>
</resources>